[package]
name = "sqlite-chia"
version = "0.1.0"
authors = ["xchdata.io <contact@xchdata.io>"]
edition = "2018"
license = "MIT"

[features]
default = []
build_extension = ["rusqlite/loadable_extension"]

[lib]
crate-type = ["cdylib", "staticlib"]
name = "chia"

[dependencies]
anyhow = "1.0.86"
#bech32 = "0.8.1"
bech32 = "0.9.1"
# Needed until serde (PR127#) is merged.
chia-protocol = { git = "https://github.com/xchdata/chia_rs", branch = "serde", features = ["serde"] }
chia-traits = { git = "https://github.com/xchdata/chia_rs", branch = "serde" }
serde_json = "1.0.120"
zstd = "0.13.2"
sha2 = "0.10.8"
syn = "2.0.70"

[dependencies.rusqlite]
package = "rusqlite"
version = "0.31.0"
features = ["loadable_extension", "functions", "blob", "bundled", "serde_json"]

[dev-dependencies]
pretty_assertions = "1.1.0"

[profile.release]
lto = true
